2002-02-19  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* download.ht (Links): Update Debian package link.

	* features.ht (Links): Mention NetBSD package.

	* download.ht: Link to the NetBSD package.

2002-02-15  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* download.ht: Update FreeBSD port URL; link to Mandrake Linux
	Contribs.
	
2002-02-14  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* faq.ht: Update pending queue question to use tmda-pending rather
	than the deprecated tmda-clean.

2002-02-13  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* install.ht: Version information for post-installation success
	reports now comes from tmda-keygen -V.

2002-02-09  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* download.ht (Links): Link to Arcady Genkin's Gentoo Linux
	package.
	
2002-02-05  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* faq.ht: New entry: "Why isn't TMDA written in Perl, C, C++,
	Java, etc..?"
	
	* config-filter.ht: Document adding arbitrary headers with the
	`tag' action, from/to-mailman, from/to-ezmlm, and from/to-autocdb.
	
2002-02-04  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* requirements.ht (Links): Python >= 2.0 is now required.

	* results.ht (Links): Add freshmeat.net comment from Martin
	Dougiamas to user testimonials, and updated monthly spam count.
	
2002-01-27  Jason R. Mastaler  <jason@mastaler.com>

	* config-filter.ht: Merge in Tim Legant's documentation.
	
2002-01-26  Jason R. Mastaler  <jason@mastaler.com>

	* download.ht (Links): Mention that the tarball can be used to
	easily create an RPM package since it includes a tmda.spec file.

	* config-filter.ht (Links): Document the new filter file syntax,
	new tag action, and the new default action keyword.

2002-01-25  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* results.ht (Links): Add freshmeat.net comment from Sven Neuhaus
	to user testimonials.
