@@ -4,8 +4,8 @@ If you are upgrading from a release of TMDA < 0.47:
 
 * tmda-clean has been removed from the distribution.  The new
   tmda-pending script can be used to provide identical functionality
-  by combining its `-q', `-b', `-d', and `-O' options.  The FAQ
-  contains an example of this.
+  by combining its `-q', `-b', `-d', and `-O' options.  tmda-pending's
+  `-h' option provides an example of this.
 
 ======================================================================
 
